Footer z-index bugfix

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,6 +40,7 @@ body {
   width: 100%;
   height: 60px;
   background-color: #f5f5f5;
+  z-index: 1000;
 }
 .container {
   .text-muted {
